test initial on mobile to fix bg

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 	background: url('../images/wlop_bg.jpg');
 	background-position: center;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: initial;
 	-webkit-background-size: cover; /* the next 3 lines are "browser prefixes", they are necessary to include for CSS3 techniques */
 	-moz-background-size: cover;
     -o-background-size: cover;
